--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "facebook/php-sdk": "^3.2",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
