successfully created a helper file

--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,16 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+     "autoload": {
+        "files": [
+            "app/Http/helpers.php"
+        ],
+        "classmap": [
+            "database"
+        ],
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
